--- a/startbootstrap-grayscale-gh-pages/templates/index.html
+++ b/startbootstrap-grayscale-gh-pages/templates/index.html
@@ -40,6 +40,7 @@
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">The Phantom of the Opera</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">Author: Andrew Lloyd Webber</h2>
+                                <a class="link" href="/historyQA">histroyQA</a><br/>
                         <a class="btn btn-primary" href="#about">Get Started</a>
                     </div>
                 </div>
