--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Tpoto-Feedback</title>
-        <link rel="stylesheet" href={{ url_for('static', filename='css/feedback.css') }} />
+        <!-- <link rel="stylesheet" href={{ url_for('static', filename='css/feedback.css') }} /> -->
     </head>
     
     <body>
