--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -1,37 +1,34 @@
 <html>
     <head>
-        <title>Tpoto-Feedback</title>
-        <!-- <link rel="stylesheet" href={{ url_for('static', filename='css/feedback.css') }} /> -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Feedback</title>
+        <link rel="stylesheet" href={{ url_for('static', filename='./css/common.css') }} />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
     </head>
     
-    <body style="background-color: #F0F0F0">
-        <a href="/">>>>返回主頁</a>
-        <div class="card" style="margin-top:100px; margin-left: 250px; margin-right: 250px">
-        <div>
+    <body class="masthead">
+        <a class="btn btn-home btn-primary " href="/" role="button">Home</a>
+        <div class="card">
             <h2 class="card-header" style="text-align: center">聯絡我們</h2>
-        </div>
-        <div class="card-body">
-            <p>非常感謝您對我們的支持，如果您在使用的過程中有遇到任何問題，歡迎您在下方提出您的想法。</p>
-        <!-- <div>
-            <input type="text" value="請在此處輸入您的想法">
-        </div> -->
-        <form action="/feedback" method="POST" onsubmit="return validate()">
-            <select name="ftype" style="text-align: left" name="feedbackType" size="1">
-                <option value="請選擇你的想法類型">請選擇你的想法類型</option>
-                <option value="问答问题">答案有誤或不準確</option>
-                <option value="页面问题">頁面問題</option>
-                <option value="资料问题">資料有誤</option>
-                <option value="建議">建議</option>
-            </select>
-            <p style="text-align: center;">
-                <textarea class="input-group mb-3 form-control" name="ftext" style="resize:none;" name="textfield" cols="100px" rows="10" resize="none">請在此處輸入你的想法</textarea>
-            </p>
-            <div style="text-align: right">
-                <a  ><input class="btn btn-dark" onclick="pressTip()" type="submit" alert="提交成功" value="提交"></a>
-                <a><input class="btn btn-dark" type="reset" value="重写"></a>
-            </div>
-        </form>
+            <div class="card-body">
+                <p>非常感謝您對我們的支持，如果您在使用的過程中有遇到任何問題，歡迎您在下方提出您的想法。</p>
+                <form action="/feedback" method="POST" onsubmit="return validate()">
+                    <select name="ftype" style="text-align: left" name="feedbackType" size="1">
+                        <option value="請選擇你的想法類型">請選擇你的想法類型</option>
+                        <option value="问答问题">答案有誤或不準確</option>
+                        <option value="页面问题">頁面問題</option>
+                        <option value="资料问题">資料有誤</option>
+                        <option value="建議">建議</option>
+                    </select>
+                    <p style="text-align: center;">
+                        <textarea class="input-group mb-3 form-control" name="ftext" style="resize:none;" name="textfield" cols="100px" rows="10" resize="none">請在此處輸入你的想法</textarea>
+                    </p>
+                    <div style="text-align: right">
+                        <a  ><input class="btn btn-dark" onclick="pressTip()" type="submit" alert="提交成功" value="提交"></a>
+                        <a><input class="btn btn-dark" type="reset" value="重寫"></a>
+                    </div>
+                </form>
         </div>
         </div>
         <script>
