--- a/templates/historyQA.html
+++ b/templates/historyQA.html
@@ -1,9 +1,11 @@
 <html>
     
     <head>
-        <title>Tpoto-HistoryQA</title>
-        <link rel="stylesheet" href={{ url_for('static', filename='css/historyQA.css') }} />
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="./static/css/common.css">
+        <title>HistoryQA</title>
     </head>
     <style>
         
@@ -11,39 +13,28 @@
     .cs{color:#f00;}/*点击后出现样式*/
     
     </style>
-    <body style="background-color: #F0F0F0">
-        <a href="/">>>>返回主頁</a>
-        <div class="card" style="margin-top:100px; margin-left: 250px; margin-right: 250px" >
-        
-        
-        <div class="card-header" style="text-align: center;">
-            <h1>歷史問答</h1>
+    <body class="masthead">
+        <a class="btn btn-home btn-primary" href="/" role="button">Home</a>
+        <div class="card" >
+            <h2 class="card-header" style="text-align: center">歷史問答</h2>
+            <div class="card-body" id="QAtable" class="card">
+            <div id="QAitems">
+                {% for row in QA %}
+                <div>
+                    <div id="itemName">
+                        <span id="Ques">Question: {{row[2]}}</span><br>
+                        <span id="Ans">Answer: {{row[3]}}</span><br>
+                        <a class="star" onclick="changeColor(this)" > &#9829;</a> 
+                        <a href="/removeFromQA?qid={{row[0]}}">刪除</a>
+                        <!-- 跳轉到反饋界面 -->
+                        <a href="/feedbackForm">反饋</a>
+                    </div>
+                    <hr id="seperator">
+                </div>
+                {% endfor %}
+            </div>
+            </div>
         </div>
-        <!-- <div>
-            <input type="text" value="請在此處輸入您的想法">
-        </div> -->
-        <div class="card-body" id="QAtable" class="card">
-	       <div id="QAitems">
-		      {% for row in QA %}
-		      <div>
-			     <div id="itemName">
-                    <span id="Ques">Question: {{row[2]}}</span><br>
-                    <span id="Ans">Answer: {{row[3]}}</span><br>
-                     <a class="star" onclick="changeColor(this)" > &#9829;</a> 
-                    <a href="/removeFromQA?qid={{row[0]}}">刪除</a>
-                    <!-- 跳轉到反饋界面 -->
-                    <a href="/feedbackForm">反饋</a>
-			     </div>
-                <hr id="seperator">
-		      </div>
-		      {% endfor %}
-<!--		      <div id="total">
-			         <span id="subtotal">Subtotal</span> : ${{totalPrice}}
-		          </div> -->
-	       </div>
-        </div>
-        </div>
-<!--        <a class="star" onclick="changeColor(this)" > &#10084;</a> -->
 
     <script>
         function changeColor(id){
