--- a/templates/question.html
+++ b/templates/question.html
@@ -20,7 +20,9 @@
                     <span>文章: </span>
                 </div>
                 <textarea class="input-group mb-3 form-control" name="content" required="required" cols="100px" rows="10px"
-                    placeholder="輸入文章，限2000字以內"></textarea>
+                    placeholder=></textarea>
+                 <input class="btn btn-dark" type="submit" name="preChapter" value="上一章">
+                 <input class="btn btn-dark" style="float:right" type="submit" name="nextChapter" value="下一章">
             </div>
             <div>
                 <div>
