--- a/templates/question.html
+++ b/templates/question.html
@@ -5,37 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./static/css/question.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./static/css/common.css">
     <title>Question</title>
 </head>
 
-<body>
-    <a href="/">>>>返回主頁</a>
-    <footer class="card mt-5 p-3">
+<body class="masthead">
+    <a class="btn btn-home btn-primary" href="/" role="button">Home</a>
+    <footer class="card ">
         <h1 class="card-header" style="text-align: center">問答</h1>
         <form class="form" method="POST" action="anser">
-            <div class="card-body">
+            <div class="card-body ">
                 <div>
                     <span>文章: </span>
                 </div>
-                <textarea class="input-group mb-3 form-control" name="content" required="required" cols="100px" rows="10px"
-                    placeholder=></textarea>
-                 <input class="btn btn-dark" type="submit" name="preChapter" value="上一章">
-                 <input class="btn btn-dark" style="float:right" type="submit" name="nextChapter" value="下一章">
+
+                <textarea class="input-group form-control " rows="7" name="content" required="required" placeholder="輸入文章，限2000字以內"></textarea>
+                <input class="btn btn-dark" type="submit" name="preChapter" value="上一章">
+                <input class="btn btn-dark" style="float:right" type="submit" name="nextChapter" value="下一章">
+
             </div>
-            <div>
+            <div class="card-body">
                 <div>
                     <span>問題: </span>
                 </div>
-                <input class="input-group mb-3 form-control" type="text" name="question" required="required"
+                <input class="input-group form-control" type="text" name="question" required="required"
                     placeholder="輸入問題">
             </div>
-            <input class="btn btn-dark" type="submit" name="submit" value="查詢">
+            <div class="text-center mb-3">
+                <input class="btn btn-dark " type="submit" name="submit" value="查詢">
+            </div>
         </form>
         </div>
-
-
 </body>
-
 </html>
