--- a/templates/historyQA.html
+++ b/templates/historyQA.html
@@ -24,7 +24,7 @@
                     <div id="itemName">
                         <span id="Ques">Question: {{row[2]}}</span><br>
                         <span id="Ans">Answer: {{row[3]}}</span><br>
-                        <a class="star" onclick="changeColor(this)" > &#9829;</a> 
+                        <!-- <a class="star" onclick="changeColor(this)" > &#9829;</a> -->
                         <a href="/removeFromQA?qid={{row[0]}}">刪除</a>
                         <!-- 跳轉到反饋界面 -->
                         <a href="/feedbackForm">反饋</a>
