--- a/templates/login.html
+++ b/templates/login.html
@@ -1,19 +1,28 @@
 <html>
-<head>
-<title>Log in</title>
-</head>
-<body style="text-align: center; margin: 10px">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href={{ url_for('static', filename='./css/common.css') }} />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+        <title>Log in</title>
+    </head>
+<body class="masthead">
+    <a class="btn btn-home btn-primary " href="/" role="button">Home</a>
+    <div class="card w-50" style="text-align: center">
     <div>
-        <h2 style='margin-top: 200px'>Log in</h2>
+        <h2 class="card-header" style="text-align: center">Log in</h2>
     </div>
 <p> {{error}} </p>
+        <div class="card-body" >
 <form action="/login" method="POST">
 	<p style="margin-top: 75px">ID: <input type="text" name="uid"></p>
 	<p>Password: <input type="password" name="password"></p>
 	<p style="margin-top: 35px;margin-bottom: 50px"><input type="submit" value="Submit"></p>
+    
 	<a style="margin: 5px" href="/registerationForm">Register</a>
-    <a style="margin: 5px" href="/goHomeFromLogin">Home</a>
 </form>
+        </div>
+        </div>
 
 </body>
 </html>
