--- a/templates/register.html
+++ b/templates/register.html
@@ -1,13 +1,20 @@
 <html>
 <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href={{ url_for('static', filename='./css/common.css') }} />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
 <title>Registration</title>
 <script type="text/javascript" src="{{ url_for('static', filename = 'js/validateForm.js') }}">
 </script>
 </head>
-<body style="text-align: center; margin: 10px">
+<body class="masthead">
+    <a class="btn btn-home btn-primary " href="/" role="button">Home</a>
+    <div class="card w-50" style="width: 200px">
     <div>
-        <h2 style='margin-top: 125px'>Registration</h2>
+        <h2 class="card-header" style='text-align: center;'>Registration</h2>
     </div>
+    <div class="card-body" style="text-align: center;">
 <form action="/register" method="POST" onsubmit="return validate()">
     <p style="margin-top: 75px">ID: <input type="uid" name="uid"></p>
 
@@ -25,9 +32,11 @@
     <p style="margin-top: 35px; margin-bottom: 50px"><input type="submit" value="Register"></p>
 
     <a style="margin: 5px" href="/loginForm">Login</a>
-    <a style="margin: 5px" href="/goHomeFromRegister">Home</a>
+    
     
 </form>
+        </div>
+        </div>
 </body>
 </html>
 
