改了資料庫吧，大家都說可以，我就推了，但是我還沒改 answer.html

--- a/templates/question.html
+++ b/templates/question.html
@@ -14,15 +14,14 @@
     <a class="btn btn-home btn-primary" href="/" role="button">Home</a>
     <footer class="card ">
         <h1 class="card-header" style="text-align: center">問答</h1>
-        <form class="form" method="POST" action="anser">
+        <form class="form" method="POST" action="answer">
             <div class="card-body ">
                 <div>
                     <span>文章: </span>
                 </div>
 
                 <textarea class="input-group form-control " rows="7" name="content" required="required" placeholder="輸入文章，限2000字以內"></textarea>
-                <input class="btn btn-dark" type="submit" name="preChapter" value="上一章">
-                <input class="btn btn-dark" style="float:right" type="submit" name="nextChapter" value="下一章">
+               
 
             </div>
             <div class="card-body">
