目錄、問答頁面刻好，問答功能未完成

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -1,22 +1,9 @@
 /* feedback, historyQA, question */
-.body{
-  background-color: #F0F0F0;
-}
-.masthead {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-size: cover;
-}
 
-.btn-home{
-  position: relative;
+.btn-home {
   margin-top: 2%;
   left: 2.5%;
+  float: left;
 }
 
 .card {
@@ -24,23 +11,51 @@
   margin: 0 auto;
   margin-top: 2%;
 }
-.c
-ard-body{
-  margin-bottom:3 auto
+.chart {
+  width: 70%;
+  justify-content: center;
+  background-color: white;
+  padding: 1rem;
+  border-radius: 2rem;
+  margin-bottom: 2rem;
+}
+
+.c ard-body {
+  margin-bottom: 3 auto;
 }
 
 .masthead {
   position: relative;
   width: 100%;
   height: auto;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../assets/img/backgroud.jpg");
+  background: linear-gradient(
+          to bottom,
+          rgba(0, 0, 0, 0.3) 0%,
+          rgba(0, 0, 0, 0.7) 75%,
+          #000 100%
+      ),
+      url("../assets/img/backgroud.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
-.form{
-      width: 80%;
-      margin: 0 auto;
+.form {
+  width: 80%;
+  margin: 0 auto;
 }
 
+.table {
+  display: flex;
+  padding: 1rem;
+}
+
+.table-text {
+  display: flex;
+  justify-content: center;
+  color: #dee2e6;
+  border: 0.3rem solid #000000 !important;
+  background-color: rgb(80, 80, 80);
+  font-size: 2em;
+  padding: 1rem;
+}
