--- a/templates/content.html
+++ b/templates/content.html
@@ -18,10 +18,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./static/js/demo.js"></script>
     <link rel="stylesheet" href="./static/css/demo.css">
-    <title>Document</title>
+    <title>章節目錄</title>
   </head>
   <body>
-        <div class="container chart">
+    <div class="table">
+      <div class="table-text">章節目錄</div>
+    </div>
+    <div class="container chart">
+      <div class="introduce">
+        <img src="../static/assets/img/Phantom.jpg" class="img-size" />
+        <div>
+          <h3>《歌劇魅影》</h3>
+          <div class="introduce-author">作者：卡斯頓．勒胡</div>
+        </div>
+      </div>
       <div id="charter"></div>
     </div>
   </body>
