--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">The Phantom of the Opera</h1>
                         <br>
-                        <a class="btn btn-primary" href="./question">Get Started</a>
+                        <a class="btn btn-primary" href="./content">Get Started</a>
                     </div>
                 </div>
             </div>
