--- a/templates/question.html
+++ b/templates/question.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,14 +12,48 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
-<body class="masthead">
-    <a class="btn btn-home btn-primary" href="/" role="button">Home</a>
-    <footer class="card ">
-        <h1 class="card-header" style="text-align: center">問答</h1>
-        <form class="form" method="POST" action="question">
-            <div class="card-body ">
-                <div>
-                    <span>文章: </span>
+
+    <body class="masthead">
+        <nav>
+            <a class="btn btn-home btn-primary" href="/" role="button">Home</a>
+        </nav>
+        <div class="table">
+            <div class="table-text">問答</div>
+        </div>
+        <div class="container chart" id="content"></div>
+        <div class="container chart-btn" id="chart-num">
+            <a
+                class="chart-btn-color col-3 btn btn-outline-secondary"
+                id="last"
+                >
+            </a>
+            <a
+                class="chart-btn-color col-3 btn btn-outline-secondary"
+                href="./content"
+                >目錄
+            </a>
+            <a
+                class="chart-btn-color col-3 btn btn-outline-secondary"
+                id="next"
+                >
+            </a>
+        </div>
+        <div class="container chart">
+            <h1 class="card-header">問答</h1>
+            <form class="form" method="POST" action="question">
+                <div class="card-body">
+                    <div>
+                        <span>問題: </span>
+                    </div>
+                    <input
+                        class="input-group form-control"
+                        type="text"
+                        id="question"
+                        name="question"
+                        required="required"
+                        placeholder="輸入問題"
+                    />
+
                 </div>
                 <textarea class="input-group form-control " rows="7" id="content" name="content" required="required"
                     placeholder="輸入文章，限2000字以內"></textarea>
@@ -44,31 +79,5 @@
             </div>
         </form>
         </div>
-
-</body>
-<script>
-    $(document).ready(function () {
-        $("#submit").click(function () {
-            let content = $('#content').val();
-            let question = $("#question").val();
-            console.log(content);
-            console.log(question);
-
-            $.ajax({
-                url: '/question',
-                method: 'POST',
-                dataType: 'json',
-                data: { content: content, question: question },
-                success: function (res) {
-                   $("#answer").text(res['output']);
-                },
-                error: function (res) {
-                    console.log("no")
-                }
-            });
-        })
-    });
-
-</script>
-
+    </body>
 </html>
