--- a/templates/content.html
+++ b/templates/content.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,8 +15,8 @@
     ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./static/js/demo.js"></script>
-    <link rel="stylesheet" href="./static/css/demo.css">
+    <script src="./static/js/content.js"></script>
+    <link rel="stylesheet" href="./static/css/content.css">
     <title>章節目錄</title>
   </head>
   <body>
