--- a/templates/index.html
+++ b/templates/index.html
@@ -6,68 +6,64 @@
         <title>The Phantom of the Opera</title>
         <link rel="icon" type="./static/image/x-icon" href="./static/assets/favicon.ico" />
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-        
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,500,600,700,700i|Montserrat:300,400,500,600,700" rel="stylesheet">
-
         <style>@import "../static/css/styles.css";</style> 
     </head>
-    <body >
-        <body id="page-top">  
-            <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
-                <div  class="container-fluid">
-                    <a class="navbar-brand" href="#">Home</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class=" collapse navbar-collapse"  id="navbarSupportedContent">
-                        <ul class="nav navbar-nav ml-auto">
-                            <li class="nav-item"><a class="nav-link " href="#about">About</a></li>
-                            {% if loggedIn %}
-                            <li class="nav-item"><a class="nav-link " href="./historyQA">History Q&A</a></li>
-                            <li class="nav-item"><a class="nav-link " href="./feedbackForm">Feedback</a></li>
-                            {% endif %}
-                            {% if not loggedIn %}
-                            <li class="nav-item"><a class="nav-link " href="./loginForm">Log in</a></li>
-                            {% else %}
-                            <li class="nav-item"><a class="nav-link "  href="./logout">Sign Out</a></li>
-                            {% endif %}
-                        </ul>
+    <body id="page-top">  
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
+            <div  class="container-fluid">
+                <a class="navbar-brand" href="/">Home</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class=" collapse navbar-collapse"  id="navbarSupportedContent">
+                    <ul class="nav navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link " href="#about">About</a></li>
+                        {% if loggedIn %}
+                        <li class="nav-item"><a class="nav-link " href="./historyQA">History Q&A</a></li>
+                        <li class="nav-item"><a class="nav-link " href="./feedbackForm">Feedback</a></li>
+                        {% endif %}
+                        {% if not loggedIn %}
+                        <li class="nav-item"><a class="nav-link " href="./loginForm">Log in</a></li>
+                        {% else %}
+                        <li class="nav-item"><a class="nav-link "  href="./logout">Sign Out</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <header class="masthead">
+            <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
+                <div class="d-flex justify-content-center">
+                    <div class="text-center">
+                        <a class="btn btn-primary" href="./content">Get Started</a>
                     </div>
                 </div>
-            </nav>
-            <header class="masthead">
-                <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
-                    <div class="d-flex justify-content-center">
-                        <div class="text-center">
-                            <a class="btn btn-primary" href="./content">Get Started</a>
-                        </div>
-                    </div>
-                </div>
-            </header>
-            <section class="about-section text-center" id="about">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <p class="text-white">
-                        {%for about in config.about%}    
-                            {{about.string}}
-                        {%endfor%}
-                        </p>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div  class="container">
-                    {%for character in config.character%}
-                        <div class="card">
-                            <h4 class="card-title">{{character.name}}</h4>
-                            <p class="card-text">{{character.introduction}}</p>
-                        </div>
+            </div>
+        </header>
+        <section class="about-section text-center" id="about">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <p class="text-white">
+                    {%for about in config.about%}    
+                        {{about.string}}
                     {%endfor%}
+                    </p>
                 </div>
-            </section>
+            </div>
+        </section>
+        <section >
+            <div  class="container">
+                {%for character in config.character%}
+                    <div class="card">
+                        <h4 class="card-title">{{character.name}}</h4>
+                        <p class="card-text">{{character.introduction}}</p>
+                    </div>
+                {%endfor%}
+            </div>
+        </section>
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
