--- a/static/css/common.css
+++ b/static/css/common.css
@@ -1,46 +1,80 @@
 /* feedback, historyQA, question */
-.body{
-  background-color: #F0F0F0;
-}
-.masthead {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-size: cover;
-}
-
-.btn-home{
-  position: relative;
-  margin-top: 2%;
-  left: 2.5%;
-}
 
 .card {
   width: 80%;
   margin: 0 auto;
   margin-top: 2%;
 }
-.c
-ard-body{
-  margin-bottom:3 auto
+
+.chart {
+  width: 70%;
+  justify-content: center;
+  background-color: white;
+  padding: 1rem;
+  border-radius: 2rem;
+  margin-bottom: 2rem;
+}
+
+.chart-btn{
+  display: flex;
+  width: 70%;
+  justify-content: space-around;
+  padding: 1rem;
+  border-radius: 2rem;
+  margin-bottom: 2rem;
+}
+.chart-btn-color{
+  background-color: white;
+  border: 1px solid #dee2e6 !important;
+  height: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+}
+.card-header{
+  text-align: center
+}
+.card-body {
+  margin-bottom: 3 auto;
 }
 
 .masthead {
   position: relative;
   width: 100%;
   height: auto;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../assets/img/backgroud.jpg");
+  background: linear-gradient(
+          to bottom,
+          rgba(0, 0, 0, 0.3) 0%,
+          rgba(0, 0, 0, 0.7) 75%,
+          #000 100%
+      ),
+      url("../assets/img/backgroud.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
-.form{
-      width: 80%;
-      margin: 0 auto;
+
+.form {
+  width: 80%;
+  margin: 0 auto;
 }
 
+.table {
+  display: flex;
+  /* padding: 1rem; */
+  justify-content: center;
+  padding-top:5rem
+}
+
+
+.table-text {
+  display: flex;
+  justify-content: center;
+  color: #dee2e6;
+  border: 0.3rem solid #000000 !important;
+  background-color: rgb(80, 80, 80);
+  font-size: 2em;
+  padding: 1rem;
+}
