--- a/templates/index.html
+++ b/templates/index.html
@@ -1,87 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
+        <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>The Phantom of the Opera</title>
         <link rel="icon" type="./static/image/x-icon" href="./static/assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href={{ url_for('static' , filename='./css/styles.css') }} rel="stylesheet" />
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,500,600,700,700i|Montserrat:300,400,500,600,700" rel="stylesheet">
+        <style>@import "../static/css/styles.css";</style> 
     </head>
-    <body id="page-top">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-            <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#page-top">Home</a>
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars"></i>
+    <body id="page-top">  
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
+            <div  class="container-fluid">
+                <a class="navbar-brand" href="/">Home</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./historyQA">History Q&A</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./feedbackForm">Feedback</a></li>
+                <div class=" collapse navbar-collapse"  id="navbarSupportedContent">
+                    <ul class="nav navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link " href="#about">About</a></li>
+                        {% if loggedIn %}
+                        <li class="nav-item"><a class="nav-link " href="./historyQA">History Q&A</a></li>
+                        <li class="nav-item"><a class="nav-link " href="./feedbackForm">Feedback</a></li>
+                        {% endif %}
                         {% if not loggedIn %}
-                        <div>
-                        <li class="nav-item"><a class="nav-link" href="./loginForm">Log in</a></li>
-                        </div>
+                        <li class="nav-item"><a class="nav-link " href="./loginForm">Log in</a></li>
                         {% else %}
-                        <div>
-                        <li class="nav-item"><a class="nav-link" href="./logout">Sign Out</a></li>
-                        </div>
+                        <li class="nav-item"><a class="nav-link "  href="./logout">Sign Out</a></li>
                         {% endif %}
                     </ul>
                 </div>
             </div>
         </nav>
-        <!-- Masthead-->
         <header class="masthead">
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
-                        <h1 class="mx-auto my-0 text-uppercase">The Phantom of the Opera</h1>
-                        <br>
-                        <a class="btn btn-primary" href="./question">Get Started</a>
+                        <a class="btn btn-primary" href="./content">Get Started</a>
                     </div>
                 </div>
             </div>
         </header>
-        <!-- About-->
         <section class="about-section text-center" id="about">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-8">
-                        <p class="text-white">
-                        {%for about in config.about%}    
-                            {{about.string}}
-                        {%endfor%}
-                        </p>
-                    </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <p class="text-white">
+                    {%for about in config.about%}    
+                        {{about.string}}
+                    {%endfor%}
+                    </p>
                 </div>
             </div>
         </section>
-        <!-- Projects-->
-        <div class="projects-section bg-white" id="projects">
-                <!-- Featured Project Row-->
-                <div class="row justify-content-center ">
-                    {%for character in config.character%}
-                        <div class=" mb-2 project-text my-auto bg-black text-lg-left col-lg-8">
-                            <h4 class="text-white">{{character.name}}</h4>
-                            <p class="mb-0 text-white">{{character.introduction}}</p>
-                        </div>
-                    {%endfor%}
-                </div>
+        <section >
+            <div  class="container">
+                {%for character in config.character%}
+                    <div class="card">
+                        <h4 class="card-title">{{character.name}}</h4>
+                        <p class="card-text">{{character.introduction}}</p>
+                    </div>
+                {%endfor%}
             </div>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="./static/js/scripts.js"></script>
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+        </section>
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
 </html>
