--- a/templates/question.html
+++ b/templates/question.html
@@ -1,41 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="../static/css/common.css"
+        />
+        <title>Question</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="../static/js/question.js"></script>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./static/css/common.css">
-    <title>Question</title>
-</head>
-
-<body class="masthead">
-    <a class="btn btn-home btn-primary" href="/" role="button">Home</a>
-    <footer class="card ">
-        <h1 class="card-header" style="text-align: center">問答</h1>
-        <form class="form" method="POST" action="anser">
-            <div class="card-body ">
-                <div>
-                    <span>文章: </span>
+    <body class="masthead">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
+            <div  class="container-fluid">
+                <a class="navbar-brand" href="/">Home</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class=" collapse navbar-collapse"  id="navbarSupportedContent">
+                    <ul class="nav navbar-nav ms-auto">
+                        {% if loggedIn %}
+                        <li class="nav-item"><a class="nav-link " href="./historyQA">History Q&A</a></li>
+                        <li class="nav-item"><a class="nav-link " href="./feedbackForm">Feedback</a></li>
+                        {% endif %}
+                        {% if not loggedIn %}
+                        <li class="nav-item"><a class="nav-link " href="./loginForm">Log in</a></li>
+                        {% else %}
+                        <li class="nav-item"><a class="nav-link "  href="./logout">Sign Out</a></li>
+                        {% endif %}
+                    </ul>
                 </div>
-
-                <textarea class="input-group form-control " rows="7" name="content" required="required" placeholder="輸入文章，限2000字以內"></textarea>
-                <input class="btn btn-dark" type="submit" name="preChapter" value="上一章">
-                <input class="btn btn-dark" style="float:right" type="submit" name="nextChapter" value="下一章">
-
             </div>
-            <div class="card-body">
-                <div>
-                    <span>問題: </span>
-                </div>
-                <input class="input-group form-control" type="text" name="question" required="required"
-                    placeholder="輸入問題">
-            </div>
-            <div class="text-center mb-3">
-                <input class="btn btn-dark " type="submit" name="submit" value="查詢">
-            </div>
-        </form>
+        </nav>
+        <div class="table">
+            <div class="table-text">問答</div>
         </div>
-</body>
+        <div class="container chart" id="content"></div>
+        <div class="container chart-btn" id="chart-num">
+            <a
+                class="chart-btn-color col-3 btn btn-outline-secondary"
+                id="last"
+                >
+            </a>
+            <a
+                class="chart-btn-color col-3 btn btn-outline-secondary"
+                href="./content"
+                >目錄
+            </a>
+            <a
+                class="chart-btn-color col-3 btn btn-outline-secondary"
+                id="next"
+                >
+            </a>
+        </div>
+        <div class="container chart">
+            <h1 class="card-header">問答</h1>
+            <form class="form" method="POST" action="question">
+                <div class="card-body">
+                    <div>
+                        <span>問題: </span>
+                    </div>
+                    <input
+                        class="input-group form-control"
+                        type="text"
+                        id="question"
+                        name="question"
+                        required="required"
+                        placeholder="輸入問題"
+                    />
+                    <div >
+                        <span>答案:</span>
+                        <span  id="answer"></span>
+                    </div>
+                    <div class="text-center mb-3">
+                        <input class="btn btn-dark" id="submit" type="button" name="submit" value="查詢">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </body>>
 </html>
